--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <!-- ====== Custom CSS ====== -->
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Fashion Shop</title>
+    <title>Fashion Clothing</title>
   </head>
   <body>
     <!-- ====== Header ====== -->
@@ -303,8 +303,8 @@
             <div class="icon d-flex"><i class="bx bxl-youtube"></i></div>
           </div>
           <p class="color">
-            Copyrights 2021 <br />
-            @Iamabdulqadeer01
+            sks Copyrights<br />
+            @sanjeevansks
           </p>
         </div>
         <div class="col">
@@ -337,15 +337,15 @@
             <h4 id="contact">Contact Us</h4>
             <div class="d-flex">
               <div class="icon"><i class="bx bxs-map"></i></div>
-              <span>123 Street Trafford, London, UK</span>
+              <span>Tambaram , Chennai , India</span>
             </div>
             <div class="d-flex">
               <div class="icon"><i class="bx bxs-envelope"></i></div>
-              <span>info@sitename.com</span>
+              <span>sanjeevan@gmail.com</span>
             </div>
             <div class="d-flex">
               <div class="icon"><i class="bx bxs-phone"></i></div>
-              <span>+456 789 789 001</span>
+              <span>+9894283159</span>
             </div>
           </div>
         </div>
